2018-04-17  John D. Ramsdell  <ramsdell@mitre.org>

 	* cpsa.cabal (Version): Tagged as 3.5.0.

2018-03-20  John D. Ramsdell  <ramsdell@mitre.org>

	* src/CPSA/DiffieHellman/Algebra.hs (displayVar, mkVar): Changed
	sort names.  expn -> rndx and expr -> expt.

2018-02-12  John D. Ramsdell  <ramsdell@mitre.org>

	* src/CPSA/SAS/SAS.hs (disjoin): Changed output to (false) on an
	empty disjunction instead of (or).

2018-01-12  John D. Ramsdell  <ramsdell@mitre.org>

	* src/CPSA/Lib/Loader.hs (mkListenerRole): Changed do pattern to
	be irrefutable.

2017-09-15  John D. Ramsdell  <ramsdell@mitre.org>

	* src/CPSA/DiffieHellman/Algebra.hs (unifyTerms):  Added calls to
	chase before calling unifyBase which prevents a failure in the
	occurs check.

2017-09-14  John D. Ramsdell  <ramsdell@mitre.org>

	* src/CPSA/Lib/Strand.hs (tryPerm): Add missing inverse
	permutation to second checkOrigs in tryPerm.

2017-09-12  John D. Ramsdell  <ramsdell@mitre.org>

	* cpsa.cabal:  Removed CPSA.Lib.CPSA globally and removed
	unnecessary dependencies.

2017-08-30  John D. Ramsdell  <ramsdell@mitre.org>

	* cpsa.cabal: Added missing modules and source repository
	location.

	* src/CPSA/Lib/DebugLibrary.hs (zi): Fixed erroneous parameters in
	Instance.

2017-08-28  John D. Ramsdell  <ramsdell@mitre.org>

	* src/CPSA/Lib/Cohort.hs (solved): Fixed condition 5.  It was
	using ct instead of ct'.

2017-06-30  John D. Ramsdell  <ramsdell@mitre.org>

	* src/CPSA/Lib/Cohort.hs (transformingNode, maybeAug, nextNode):
	Rewrote code so that it no longer fails the ambiguity check.

2017-05-26  John D. Ramsdell  <ramsdell@mitre.org>

	* src/CPSA/DiffieHellman/Algebra.hs (mkInitMatchDecis): Ensure
	initial distinctions to not include fresh variables.
	(partition): Do not move variables of sort expn to lhs, even if
	they are freshly generated.

2017-05-16  John D. Ramsdell  <ramsdell@mitre.org>

	* src/CPSA/DiffieHellman/Algebra.hs (displaySubst):  Removed