@@ -1,5 +1,5 @@
 Name:			cpsa
-Version:		3.5.0
+Version:		3.5.1
 Maintainer:		mliskov@mitre.org
 Cabal-Version:		>= 1.6
 License:		BSD3
